[package]
name = "hal_async_experiment"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal-common = { package = "esp-hal-common", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { git = "https://github.com/esp-rs/esp-println", features = [ "esp32c3" ]}
riscv-rt = { version = "0.8" }
riscv = { version = "0.8" }
embedded-hal-async = "0.1.0-alpha.1"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
futures = { version = "0.3", default-features = false, features = [ "async-await" ] }
heapless = "0.7.13"
